Make group list wrap in fixed space

--- a/src/Components/App/Body/Graph/Buttons/index.css
+++ b/src/Components/App/Body/Graph/Buttons/index.css
@@ -5,6 +5,7 @@
 
 .graph-menu {
     float: left;
+    width:500px;
 }
 
 .graph-menu-list {
